# DevChat

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/src/: main.py
frontend/: index.html  package.json
frontend/src/css/: style.css
frontend/src/css/components/: click-popup.css  search-field.css
frontend/src/css/views/: home.css
frontend/src/js/: main.js
frontend/src/js/components/: click-popup.js  counter.js  search-field.js
frontend/src/js/views/: home.js
